--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=3838
 
 #database
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.31.125:3306/cicd
-jdbc.username=root
+jdbc.url=jdbc:mysql://120.77.34.35:3306/smartmonitorsystem
+jdbc.username=fangjianyong
 jdbc.password=123456
+
+#logging.level.com.fjy = DEBUG
