--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
         	<artifactId>standard</artifactId>
         	<version>1.1.2</version>
         </dependency>
+        <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
    </dependencies>
    
    <properties>
