--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+        <dependency>
+		    <groupId>io.netty</groupId>
+		    <artifactId>netty-all</artifactId>
+		    <version>4.1.24.Final</version>
+		</dependency>
    </dependencies>
    
    <properties>
